--- a/res/layout/item_photo_search.xml
+++ b/res/layout/item_photo_search.xml
@@ -10,7 +10,8 @@
         android:id="@+id/imageView"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:background="@android:drawable/gallery_thumb"
+        android:background="#77777777"
+        android:padding="4dp"
         android:scaleType="fitCenter" />
     
     <TextView android:id="@+id/textView"
