--- a/res/layout/activity_search_results.xml
+++ b/res/layout/activity_search_results.xml
@@ -13,19 +13,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:iconifiedByDefault="false" />
+        android:iconifiedByDefault="false"
+        android:layout_marginBottom="@dimen/activity_vertical_margin" />
     
     <GridView
         android:id="@+id/gridView"
-        android:numColumns="auto_fit"
-        android:stretchMode="spacingWidth"
-        android:columnWidth="160dp"
-        android:horizontalSpacing="5dp"
-        android:verticalSpacing="5dp"
-        android:layout_below="@+id/searchView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"/>
+        android:layout_below="@+id/searchView"
+        android:columnWidth="85dp"
+        android:horizontalSpacing="10dp"
+        android:numColumns="auto_fit"
+        android:stretchMode="spacingWidth"
+        android:verticalSpacing="10dp"
+        tools:ignore="RtlHardcoded" />
+
 </RelativeLayout>
