--- a/res/layout/activity_single_photo.xml
+++ b/res/layout/activity_single_photo.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" >
@@ -8,23 +8,19 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
         android:adjustViewBounds="true"
         android:fitsSystemWindows="true"
+        android:layout_gravity="fill"
         android:scaleType="fitXY" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/imageView"
-        android:layout_alignBottom="@+id/imageView"
-        android:layout_alignRight="@+id/imageView"
         android:background="#99000000"
         android:lineSpacingExtra="2sp"
-        android:orientation="vertical"
-        android:padding="15dp"
-        android:scrollbars="vertical"
-        tools:ignore="RtlHardcoded" />
+        android:padding="12dp"
+        android:layout_gravity="fill_horizontal|bottom"
+        android:scrollbars="vertical" />
 
-</RelativeLayout>
+</FrameLayout>
