--- a/res/layout-land/activity_single_photo.xml
+++ b/res/layout-land/activity_single_photo.xml
@@ -4,31 +4,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" 
     android:showDividers="middle"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:baselineAligned="false">
 
     <FrameLayout
         android:layout_weight="5" 
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
         android:layout_margin="15dp">
         
-        <com.android.volley.toolbox.NetworkImageView
-            android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:layout_gravity="center"
-            android:scaleType="fitCenter"
-            android:background="#33999999"
+	    <com.android.volley.toolbox.NetworkImageView
+	        android:id="@+id/imageView"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:adjustViewBounds="true"
+	        android:layout_gravity="center"
+	        android:scaleType="fitCenter"
+	        android:background="#33999999"
             android:padding="6dp" />
     </FrameLayout>
 
     <ScrollView
         android:layout_weight="2"
-        android:minHeight="200dp"
-        android:layout_width="match_parent"
-        android:layout_height="0dp">
+        android:minWidth="200dp"
+        android:layout_width="0dp"
+        android:layout_height="match_parent">
         
 	    <TextView
 	        android:id="@+id/textView"
