--- a/res/layout/item_photo_search.xml
+++ b/res/layout/item_photo_search.xml
@@ -7,21 +7,23 @@
 
     <com.android.volley.toolbox.NetworkImageView
         android:id="@+id/imageView"
-        android:layout_width="85dp"
-        android:layout_height="85dp"
-        android:background="#77777777"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:background="#33999999"
         android:layout_gravity="top|center_horizontal"
-    	android:padding="5dp"
+    	android:padding="6dp"
         android:scaleType="fitCenter" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="85dp"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="2dp"
+        android:padding="3dp"
         android:ellipsize="end"
-        android:gravity="center"
+        android:gravity="left"
+        android:maxLines="1"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="#66FFFFFF"
-        android:maxLines="1" />
+        tools:ignore="RtlHardcoded" />
+
 </LinearLayout>
