--- a/res/layout/activity_single_photo.xml
+++ b/res/layout/activity_single_photo.xml
@@ -13,7 +13,7 @@
         android:layout_height="0dp"
         android:layout_margin="15dp">
         
-        <com.android.volley.toolbox.NetworkImageView
+        <ImageView
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -21,22 +21,43 @@
             android:layout_gravity="center"
             android:scaleType="fitCenter"
             android:background="#33999999"
-            android:padding="6dp" />
+            android:padding="6dp" 
+            android:contentDescription="@string/content_description_big_photo"/>
     </FrameLayout>
 
-    <ScrollView
+    <FrameLayout
         android:layout_weight="2"
         android:minHeight="200dp"
         android:layout_width="match_parent"
         android:layout_height="0dp">
         
+        <TextView 
+            android:id="@+id/loadingView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableTop="@drawable/loading_big"
+            android:text="@string/loading"
+            android:layout_gravity="center"
+            android:visibility="visible" />
+        
+        <View
+            android:id="@+id/errorView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/error_big"
+            android:layout_gravity="center"
+            android:visibility="gone" />
+        
 	    <TextView
 	        android:id="@+id/textView"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
+	        android:scrollbars="vertical"
+	        android:scrollbarStyle="outsideOverlay"
 	        android:lineSpacingExtra="2sp"
 	        android:padding="15dp" 
-	        android:layout_gravity="fill_horizontal|center_vertical"/>
-    </ScrollView>
+	        android:layout_gravity="fill_horizontal|center_vertical"
+	        android:visibility="gone" />
+    </FrameLayout>
 
 </LinearLayout>
