--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -5,7 +5,12 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:showAsAction="never"
+        android:showAsAction="ifRoom"
         android:title="@string/action_settings"/>
-
+    
+    <item
+        android:id="@+id/action_recent_queries"
+        android:orderInCategory="100"
+        android:showAsAction="ifRoom"
+        android:title="@string/action_recent_queries"/>
 </menu>
