--- a/res/layout/activity_search_results.xml
+++ b/res/layout/activity_search_results.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,30 +6,69 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:id="@+id/focusContainer"
-    tools:context="com.tomaszgawel.flickrphotos.PhotoSearchActivity" >
+    android:orientation="vertical"
+    tools:context="com.tomaszgawel.flickrphotos.PhotoSearchActivity"
+    tools:ignore="RtlHardcoded">
 
     <SearchView
+        android:layout_weight="0"
         android:id="@+id/searchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:iconifiedByDefault="false"
+        android:queryHint="@string/search_hint"
         android:layout_marginBottom="@dimen/activity_vertical_margin" />
-    
-    <GridView
-        android:id="@+id/gridView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/searchView"
-        android:columnWidth="160dp"
-        android:horizontalSpacing="10dp"
-        android:numColumns="auto_fit"
-        android:stretchMode="spacingWidth"
-        android:verticalSpacing="10dp"
-        tools:ignore="RtlHardcoded" />
 
-</RelativeLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" >
+        
+	    <GridView
+	        android:id="@+id/gridView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+	        android:horizontalSpacing="10dp"
+	        android:columnWidth="100dp"
+	        android:numColumns="auto_fit"
+	        android:stretchMode="columnWidth"
+	        android:verticalSpacing="10dp" />
+	    
+	    <include android:id="@+id/gridProgressError" layout="@layout/loading_common"/>
+    </FrameLayout>
+    
+    <RelativeLayout 
+        android:id="@+id/pagerFrame"
+        android:layout_weight="0"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        
+        <Button 
+            android:id="@+id/prevPageButton"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            style="?android:attr/buttonStyleSmall"
+            android:text="@string/prev_page_button"
+            android:enabled="false" />
+        
+        <TextView 
+            android:id="@+id/pageInfoText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/prevPageButton"
+            android:layout_toLeftOf="@+id/nextPageButton"
+            android:layout_centerVertical="true"
+            android:gravity="center_horizontal" />
+
+        <Button 
+            android:id="@+id/nextPageButton"
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            style="?android:attr/buttonStyleSmall"
+            android:text="@string/next_page_button"
+            android:enabled="false" />
+    </RelativeLayout>
+</LinearLayout>
